--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,27 @@
     font-family: Roboto; 
     src: url(Roboto-Regular.ttf);
   }
-  
+@font-face{
+    font-family: Got; 
+    src: url(Game-of-Thrones.ttf);
+  }  
   body{
     margin:0;
     font-size: 16px;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     color: #333;
+  }
+  h3, h6{
+    font-family: Got, serif;
+    text-align: center;
   }
   h3{
     color: #ccc;
+    font-weight: normal;
   }
   h6{
-    text-align: center;
     margin-top:2px;
+    font-variant:small-caps;
   }
   div{
     position:relative;
@@ -57,6 +65,10 @@
   .character-div img{
     max-width: 80px;
 }
+.character-div:hover{
+    color:#fff;
+    text-shadow: 0 0 10px #c00;
+      }
 
 .one-character-div{
     color: #ccc;
@@ -81,6 +93,23 @@
     width: 30%;
     float: left;
     text-align: right;
+}
+
+#search-button{
+    min-height: 30px;
+    padding: 6px 8px;
+    background: #333;
+    color: #ccc;
+    border: 1px solid #ccc;
+}
+#search-text{
+    height: 20px;
+    padding: 4px;
+    border: 1px solid #ccc;
+    margin-left: 20px;
+    font-size: 12px;
+    background: white url(/assets/icon/search-icon.png) left no-repeat;
+    padding-left: 17px;
 }
   
   @media(max-width:1200px){
