--- a/css/style.css
+++ b/css/style.css
@@ -12,18 +12,13 @@
     font-family: Roboto, sans-serif;
     color: #333;
   }
-  h3, h6{
+  h3{
     font-family: Got, serif;
     text-align: center;
-  }
-  h3{
     color: #ccc;
     font-weight: normal;
   }
-  h6{
-    margin-top:2px;
-    font-variant:small-caps;
-  }
+
   div{
     position:relative;
     box-sizing:border-box;
@@ -62,26 +57,31 @@
       padding: 2px;
       text-align: center;
   }
+  .character-div p{
+    font: bold small-caps 10px Got, serif;
+    margin-top:2px;
+    text-align: center;
+  }
   .character-div img{
     max-width: 80px;
-}
-.character-div:hover{
+  }
+ .character-div:hover{
     color:#fff;
     text-shadow: 0 0 10px #c00;
+  }
+
+ .one-character-div{
+     color: #ccc;
 }
 
-.one-character-div{
-    color: #ccc;
-}
+ .one-character-div div{
+      padding:1px;
+      min-height: 40px;
+ }
 
-.one-character-div div{
-    padding:1px;
-    min-height: 40px;
-}
-
-.one-character-div img{
+ .one-character-div img{
     max-width: 100%;
-}
+ }
 
 .one-character-div-name{
     width: 70%;
@@ -93,8 +93,8 @@
     width: 30%;
     float: left;
     text-align: center;
-}
-.one-character-div-bio{
+ }
+ .one-character-div-bio{
     width: 100%;
     float: left;
 }
